# cdk-kinesis-firehose-athena

./: .adr-dir  .gitattributes  .gitignore  .npmignore  .projenrc.js  API.md  README.md  package.json  template.drawio  template.drawio.bak
.github/workflows/: auto-approve.yml  build.yml  upgrade.yml
.projen/: deps.json  files.json  tasks.json
assets/: gen_seed_data.py  pyproject.toml  tt
assets/data/: counties.csv  seed-data.json  states.csv
docs/architecture/data/: README.md  erd.puml  sequence.puml  table-design.md
docs/architecture/decisions/: 0001-record-architecture-decisions.md  0002-example-ddb-seed-data.md  0003-bucket-deployment-service-entrypoint.md  0004-kinesis-stream-over-dynamodb-stream.md
src/: index.ts
src/ingestion/: index.ts  s3-firehose-delivery.ts  seed-orchestrator-sfn.ts  step-function.ts
src/ingestion/lambda/: go.mod  go.sum
src/ingestion/lambda/firehose-enricher/: lambda.go
src/lambda/: go.mod  go.sum
src/lambdas/: Makefile  coverage.out  go.mod  go.sum  main.go
src/lambdas/cmd/crawler-starter/: main.go
src/lambdas/cmd/dynamodb-seeder/: main.go
src/lambdas/cmd/sfn-invoker/: main.go
src/lambdas/firehose-enricher/: enricher.go
src/storage/: event-storage.ts  glue-storage.ts  index.ts
src/storage/lambda/: go.mod  go.sum
test/: main-snapshot.test.ts  main.integ.ts  main.unit.test.ts  seeder-snapshot.test.ts  seeder.integ.ts  seeder.unit.test.ts  util.ts
test/__snapshots__/: main-snapshot.test.ts.snap  seeder-snapshot.test.ts.snap
test/seeder.integ.snapshot/: integ-stack.assets.json  integ-stack.template.json
(+27 files in other folders)
