[tool.poetry]
name = "assets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.18"
numpy = "^1.22.3"
pandas = "^1.4.1"
dynamodb-json = "^1.3"
arrow = "^1.2.2"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
